force-app/main/default/objects/LookStore__c/LookStore__c.object-meta.xml
<CustomObject>
    <description>Link a look to a store in order to display it in the look library</description>
    <label>LookStore</label>
    <nameField>
        <displayFormat>LookStore{00000000}</displayFormat>
        <label>LookStore</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LookStore</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>